--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,14 @@ dependencies:
   dropdown_button2: ^1.5.0
   fluttertoast: ^8.2.2
   flutter_smart_dialog: ^4.5.4+2
-  firebase_core: ^2.13.1
-  firebase_auth: ^4.6.2
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
   http: ^0.13.4
-  firebase_messaging: ^14.7.3
+  firebase_messaging: ^14.9.1
   shared_preferences: ^2.1.1
+  google_sign_in: ^5.4.2
+  sign_in_with_apple: ^5.0.0
+  crypto: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +58,7 @@ flutter:
     -  assets/images/
     -  assets/goal_icons/
     -  assets/avatar/
+    -  assets/vectors/
 
   fonts:
     - family: Ubuntu
