--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,14 @@ dependencies:
   flutter_smart_dialog: ^4.5.4+2
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
-  http: ^0.13.4
+  http: ^1.2.1
   firebase_messaging: ^14.9.1
   shared_preferences: ^2.1.1
   google_sign_in: ^5.4.2
   sign_in_with_apple: ^5.0.0
   crypto: ^3.0.1
+  flutter_facebook_auth: ^6.2.0
+
 
 dev_dependencies:
   flutter_test:
