--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   crypto: ^3.0.1
   flutter_facebook_auth: ^6.2.0
+  country_picker: ^2.0.25
 
 
 dev_dependencies:
