--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>648558078003-tjmghk3j3c1pkgo5h3ui4bgkk0s1uokt.apps.googleusercontent.com</string>
+	<string>648558078003-u5c7t6c0pdvovov67j5lbjji79v2u9ti.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.648558078003-tjmghk3j3c1pkgo5h3ui4bgkk0s1uokt</string>
+	<string>com.googleusercontent.apps.648558078003-u5c7t6c0pdvovov67j5lbjji79v2u9ti</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>648558078003-dsa73k9hb1bkqu8njvmph8asp0mk0r38.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.lifeBerg.app</string>
+	<string>com.lifeberg.co</string>
 	<key>PROJECT_ID</key>
 	<string>lifeberg-dev</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:648558078003:ios:e97404e701d0a2156f1b46</string>
+	<string>1:648558078003:ios:9bf7a2df042df77d6f1b46</string>
 </dict>
 </plist>
