--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   grouped_list: ^5.1.2
   event_bus: ^2.0.0
   syncfusion_flutter_sliders:
+  vibration: ^1.9.0
+  flutter_cupertino_date_picker_fork: ^1.0.7
+  animated_custom_dropdown: ^3.1.1
 
 dev_dependencies:
   flutter_test:
